--- a/css/styles.css
+++ b/css/styles.css
@@ -337,9 +337,6 @@ ul {
 
   color: var(--title-text-color);
   background-color: var(--section-second-color);
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-works .button:hover,
@@ -470,7 +467,8 @@ ul {
 }
 
 .list-works .button {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-works .button:hover,
