--- a/css/styles.css
+++ b/css/styles.css
@@ -635,14 +635,17 @@ ul {
   height: 100%;
 
   opacity: 1;
+  visibility: visible;
   background-color: var(--modal-background-color);
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .backdrop.is-hidden .modal {
